--- a/galerie/templates/galerie/base.html
+++ b/galerie/templates/galerie/base.html
@@ -1,22 +1,15 @@
-{% load static %}
-
-<!-- galerie/templates/galerie/base.html -->
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>{% block title %}Ma galerie{% endblock %}</title>
+  <title>{% block title %}Site Vitrine Artistique{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'galerie/style.css' %}">
 </head>
 <body>
-  <nav class="navbar {% block navstyle %}{% endblock %}">
-    <!-- Menu ici -->
-    <ul>
-      <li><a href="{% url 'home' %}">Accueil</a></li>
-      <li><a href="{% url 'galerie' %}">Galerie</a></li>
-    </ul>
-  </nav>
+  <div class="background"></div>
 
-  {% block content %}{% endblock %}
+  <div class="content">
+    {% block content %}{% endblock %}
+  </div>
 </body>
 </html>
