--- a/galerie/templates/galerie/home.html
+++ b/galerie/templates/galerie/home.html
@@ -53,6 +53,8 @@
       <div class="slide-preview">
         <!-- futur aperçu ici -->
       </div>
+      <!-- Bouton lien vers la page Galerie -->
+    <a href="{% url 'galerie' %}" class="slide-link-button">Voir la galerie</a>
     </div>
   </section>
 
@@ -66,6 +68,9 @@
       <div class="slide-preview">
         <!-- futur aperçu ici -->
       </div>
+
+      <!-- Bouton lien vers la page Galerie -->
+    <a href="{% url 'mosaique' %}" class="slide-link-button">Voir la mosaique</a>
     </div>
   </section>
 
@@ -79,6 +84,8 @@
       <div class="slide-preview">
         <!-- futur aperçu ici -->
       </div>
+      <!-- Bouton lien vers la page Galerie -->
+      <a href="{% url 'a_propos' %}" class="slide-link-button">Voir le "a propos"</a>
     </div>
   </section>
 
@@ -92,6 +99,8 @@
       <div class="slide-preview">
         <!-- futur aperçu ici -->
       </div>
+        <!-- Bouton lien vers la page Galerie -->
+        <a href="{% url 'contact' %}" class="slide-link-button">Contacter</a>
     </div>
   </section>
 
